--- a/public/estilo.css
+++ b/public/estilo.css
@@ -28,7 +28,7 @@ header {
 .painel-esquerdo {
   width: 16%;
   height: 220%; 
-  background-color: #ecccad;
+  background-color: #f8922c;
   padding: 20px;
   border-right: 1px solid #ccc;
   border-radius: 0 20px 20px 0;  
@@ -88,7 +88,7 @@ select {
 }
 
 .botao-blue {
-  background-color: #ecccad;
+  background-color: #f8922c;
   color: black;
   padding: 10px 20px;         
   padding-left: 15px;         
@@ -310,8 +310,7 @@ input[type=number]::-webkit-inner-spin-button {
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 16px;  
-  letter-spacing: 1.5px;
-  /*text-transform: uppercase;*/
+  letter-spacing: 1.5px;  
   margin-bottom: 1px;
   text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
   transition: transform 0.3s ease, text-shadow 0.3s ease;
