--- a/public/estilo.css
+++ b/public/estilo.css
@@ -26,12 +26,13 @@ header {
 
 /* Painel esquerdo */
 .painel-esquerdo {
-  width: 16%;
+  width: 235px;
   height: 220%; 
   background-color: #f8922c;
   padding: 20px;
   border-right: 1px solid #ccc;
   border-radius: 0 20px 20px 0;  
+  margin-left: -20px;
 }
 
 
