--- a/public/estilo.css
+++ b/public/estilo.css
@@ -47,8 +47,7 @@ header {
 .painel-direito {
   width: 18%;  
   height: 220%; 
-  background-color: #ecccad;
-  /*background-color: #f5f5f5;*/
+  background-color: #f8922c;  
   padding: 20px;
   border-left: 1px solid #ccc;
   border-radius: 20px 0 0 20px;
@@ -90,6 +89,19 @@ select {
 
 .botao-blue {
   background-color: #f8922c;
+  color: black;
+  padding: 10px 20px;         
+  padding-left: 15px;         
+  text-align: left;  
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 13px;
+  height: 30px;    
+}
+
+.botao-laranja {
+  background-color: #f35005;
   color: black;
   padding: 10px 20px;         
   padding-left: 15px;         
